fixed some gaps

--- a/main.css
+++ b/main.css
@@ -14,7 +14,6 @@
 
 /* Body */
 body {
-    color: white;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
@@ -23,14 +22,14 @@ body {
 #container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content:flex-start;
+    min-height: 100vh;
 }
 
 /*Header */
 #header {
     background-color: rgba(27, 31, 34, 0.8);
     padding: 10px;
-    margin-bottom: 20px; /* Add margin at the bottom to create space */
 }
 
 #header nav {
@@ -67,15 +66,16 @@ body {
 }
 
 #header nav a.active {
-    color: darkorchid;
+    color: #9873AC;
 }
 
 /* Main */
 #main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px auto 0; /* Add margin at the top to create space */}
+}
 
 /* Content */
 #content {
@@ -84,7 +84,7 @@ body {
     align-items: center;
     max-width: 100%;
     text-align: center;
-    margin-top: auto; 
+    margin-top: 100px; 
     margin-bottom: auto;
 }
 
@@ -92,19 +92,19 @@ body {
     border-radius: 50%;
     width: 200px;
     height: 200px;
-    margin: auto;
+    margin-top: 0;
+    margin-bottom: 10px;
     display: block;
     border: 2px solid #ffffff;
 }
 
-#content img {
-    margin-bottom: 5px;
-}
-
 #content h1 {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
+#content h3 {
+    margin-bottom: 10px;
+}
 
 #content .icons {
     list-style: none;
@@ -148,7 +148,7 @@ a:visited {
 }
 
 a:active {
-    color: red;
+    color: #9873AC;
 }
 
 p {
